made navbar fixed and aligned back button

--- a/src/Components/Navbar/Sidebar.css
+++ b/src/Components/Navbar/Sidebar.css
@@ -19,7 +19,7 @@
   
   .sidebar-header {
     padding: 2px;
-    background-color: gray;
+    background-color: black;
     color: #fff;
     font-size: 1.2rem;
   }
